# OpcUaModbusServer

./: .gitignore  Dockerfile  README.rst  build.sh  start.bat
doc/ua/: ModbusSlave.xml  modbus.bsd  modbus.tt2pro  modbus.ua  modbus.xml  modbus.xsd
docs/source/: conf.py  glossary.rst  index.rst
docs/source/1_getting_started/: installation.rst  overview.rst
src/: CMakeLists.txt
src/OpcUaModbusServer/: CMakeLists.txt
src/OpcUaModbusServer/Config/: OpcUaServer.xml
src/OpcUaModbusServer/Modbus/: CMakeLists.txt
src/OpcUaModbusServer/Modbus/Modbus/: Modbus.cpp  Modbus.h  ModbusError.cpp  ModbusError.h  ModbusException.cpp  ModbusException.h  ModbusFactory.cpp  ModbusFactory.h  ModbusPackBase.cpp  ModbusPackBase.h  ModbusPackHeader.cpp  ModbusPackHeader.h  ModbusRTU.cpp  ModbusRTU.h  ModbusRTUClient.cpp  ModbusRTUClient.h  ModbusRTUClientTrx.cpp  ModbusRTUClientTrx.h  ModbusRTUServer.cpp  ModbusRTUServer.h  ModbusRTUTrx.cpp  ModbusReqReadCoil.cpp  ModbusReqReadCoil.h  ModbusReqReadDiscreteInputs.cpp  ModbusReqReadDiscreteInputs.h  ModbusResReadCoil.cpp  ModbusResReadCoil.h  ModbusResReadDiscreteInputs.cpp  ModbusResReadDiscreteInputs.h  ModbusTrx.cpp  ModbusTrx.h  ModbusTypes.h
src/OpcUaModbusServer/Modbus/ModbusRTU/: ModbusRTU.cpp  ModbusRTU.h  ModbusRTUClient.cpp  ModbusRTUClient.h  ModbusRTUClientTrx.cpp  ModbusRTUClientTrx.h  ModbusRTUException.cpp  ModbusRTUException.h  ModbusRTUFactory.cpp  ModbusRTUFactory.h  ModbusRTUServer.cpp  ModbusRTUServer.h  ModbusRTUServerTrx.cpp  ModbusRTUServerTrx.h  ModbusRTUTrx.cpp  ModbusRTUTrx.h
src/OpcUaModbusServer/Modbus/Utility/: BackgroundThread.cpp  BackgroundThread.h  CRC16.cpp  CRC16.h  Log.cpp  Log.h
src/OpcUaModbusServer/linux/etc/init/: OpcUaModbusServer.conf.in
src/OpcUaModbusServer/linux/etc/init.d/: OpcUaModbusServer.in
src/OpcUaModbusServer/linux/script/: postinst  prerm
src/OpcUaModbusServer/linux/usr/lib/systemd/system/: OpcUaModbusServer.service.in
tst/: CMakeLists.txt
tst/Modbus/: CMakeLists.txt  RTU_ReadCoil_t.cpp  unittest.cpp  unittest.h
tst/Modbus/Modbus/: RTU_ReadCoil_t.cpp  RTU_ReadDiscreteInputs_t.cpp
tst/Modbus/Utility/: CRC16_t.cpp
