# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# build 
# 
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------

file(
    GLOB 
    Modbus_SRC 
    ${PROJECT_SOURCE_DIR}/OpcUaModbusServer/Modbus/*/*.cpp
)

add_library(
    Modbus SHARED
    ${Modbus_SRC}
)

target_link_libraries(
    Modbus
    ${pthread}
    ${Boost_LIBRARIES}
)

# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# install
# 
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
